# altRAG

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  seed.md
.github/workflows/: ci.yml  publish.yml
altrag/: __init__.py  __main__.py  cli.py  scan.c  scanner.py  template.html
assets/: .gitkeep
samples/: api-reference.md  k8s-deploy.md  messy-config.yaml
tests/: test_cli.py  test_scanner.py
tools/tcc/: fetch.sh
