[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altrag"
version = "0.1.1"
description = "Pointer-based skill retrieval for LLM agents. Alternative to vector DB RAG."
readme = "README.md"
license = "MIT"
dependencies = []
requires-python = ">=3.10"
keywords = ["llm", "rag", "skills", "agents", "pointers", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["altrag*"]

[project.scripts]
altrag = "altrag.cli:main"

[project.urls]
Homepage = "https://github.com/antiresonant/altRAG"
Issues = "https://github.com/antiresonant/altRAG/issues"

[tool.setuptools.package-data]
altrag = ["template.html"]
